--- a/vvsc_web/src/components/Header/Header.css
+++ b/vvsc_web/src/components/Header/Header.css
@@ -10,19 +10,16 @@
 @media (min-width:768px) {
     #header p {
         font-size: 1.15rem;
-        font-weight: 300;
+        font-weight: 200;
     }
 }
 
-hr {
-    max-width: 50px;
-    border-width: 3px;
-    border-color: #f05f40;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
+#header p {
+    font-family: Merriweather;
+    font-weight: 100;
+    font-size: 1.35rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 .text-faded {
@@ -34,6 +31,7 @@ hr {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px);
     background-position: 50%;
@@ -42,11 +40,15 @@ hr {
 }
 
 .btn {
-    font-weight: 700;
+    font-weight: 100;
     text-transform: uppercase;
     border: none;
     border-radius: 300px;
     font-family: Open Sans, Helvetica Neue, Arial, sans-serif;
+}
+
+hr {
+    border: 2px;
 }
 
 @media (min-width:1200px) {
